Removed CSS rule that was causes alignment issues with top-bar on mobile

--- a/css/uwarc.css
+++ b/css/uwarc.css
@@ -60,10 +60,6 @@ dt {
    margin-left: 20px;
 }
 
-.top-bar {
-   padding: 0 20px;
-}
-
 .header {
    border-top: 5px solid #fcd450;
    border-bottom: 1px solid #000;
